css/layout.styl
html {
  background: #EDEDED;
  color: $gray-dark;
  font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif;
  height: 100%;
}

body {
  margin: 0;
  min-width: 1220px;
  height: 100%;
}

h2 {
  @extends #rule-below;
  color: $blue;
  font-size: 16px;
  margin: 20px 0 20px;
  padding-bottom: 5px;
}

h3 {
  border-bottom: 2px solid;
  font-weight: 500;
  font-size: 22px;
  margin: 10px 0;
  padding-bottom: 5px;
}

h2,
h3 {
  .aux {
    float: right;
    font-size: 12px;
    margin-top: 5px;
  }
}

h4 {
  margin: 10px 0;
}

hr {
  border: 0;
  border-top: 1px solid rgba($black, 0.125);
  border-bottom: 1px solid $white;
  margin: 20px 0;
}

.none {
  color: $gray;
  font-style: italic;
}

button {
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  font: inherit;
  margin: 0;
  padding: 0;

  &:disabled {
    cursor: pointer;
    opacity: 0.5;
    pointer-events: none;
  }
}

input,
textarea {
  background: $white;
  border: 1px solid $gray;
  box-shadow: 0 1px 0 $white;
  font: inherit;
  padding: 5px;
}

img {
  &.thin-frame {
    border: 1px solid $white;
    box-shadow: 0 1px 2px -1px $black;
    box-sizing: border-box;
  }
}

a {
  color: $blue;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

#app {
  box-sizing: border-box;
  min-height: 100%;
  padding-bottom: 100px;

  > .stack {
    margin: 0 auto;
    width: 90%;
  }
}

body > footer {
  background: $gray-less-light;
  clear: both;
  color: $gray;
  font-size: 18px;
  height: 50px;
  line-height: 50px;
  margin-top: -50px;
  text-align: center;

  .logo {
    margin-top: -5px;
    vertical-align: middle;
  }

  p {
    margin: 0;
  }
}

.stack > *
  display: none

  &.active
    display: block

html
  .show-for-privileged-user
    visibility: hidden
  
  &.not-signed-in
    .hide-without-user, .show-for-privileged-user
      display: none

  &.signed-in
    .hide-with-user
      display: none
  
  &.privileged-user
    .show-for-privileged-user
      visibility: visible

